--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "cors": "^2.8.4",
+    "device": "^0.3.9",
     "dotenv": "^6.0.0",
     "fastify": "^1.9.0",
     "googleapis": "^34.0.0",
