--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
   - node -e "console.log('CPU:', require('os').cpus().length, 'x', require('os').cpus()[0].model)"
   - npm test
 after_test:
-  - npx codecov
+#  - npx codecov
