--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/index.js | pino-pretty -l",
     "test": "xo &&nyc ava",
-    "update": "npm-check -u"
+    "update": "npm-check -u",
+    "release": "np"
   },
   "files": [
     "src"
