Update CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
   - node_modules
 install:
   - npm install
-  - npm list -g --depth=0
+  - npm list --depth=0
 script:
   - node --version
   - npm --version
