Update to nodejs 22

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Multi-purpose URI tracker",
   "license": "MIT",
   "scripts": {
-    "start": "now dev",
+    "start": "vercel dev",
     "lint": "xo",
     "test": "xo &&nyc ava",
     "update": "npm-check -u",
@@ -15,23 +15,25 @@
     "src"
   ],
   "engine": {
-    "node": ">=6"
+    "node": ">=22"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "device": "^0.3.9",
-    "dotenv": "^8.1.0",
-    "googleapis": "^43.0.0",
-    "iplocation": "^6.1.0",
-    "ua-parser-js": "^0.7.19",
+    "dotenv": "^17.2.2",
+    "geoip-lite": "^1.4.10",
+    "googleapis": "^159.0.0",
+    "iplocation": "^7.2.0",
+    "maxmind": "^5.0.0",
+    "ua-parser-js": "^2.0.5",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "ava": "*",
-    "now": "*",
     "np": "*",
     "npm-check": "*",
     "nyc": "*",
+    "vercel": "*",
     "xo": "*"
   },
   "ava": {
