--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=22"
   },
   "dependencies": {
+    "@vercel/functions": "^3.1.0",
     "googleapis": "^160.0.0",
     "ua-parser-js": "^2.0.5",
     "valid-url": "^1.0.9"
