--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "vercel dev",
     "lint": "xo",
+    "test": "xo",
     "update": "npx npm-check -u",
     "release": "npx np"
   },
